[gd_scene load_steps=85 format=3 uid="uid://6gvd61vivt27"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_qs0df"]
[ext_resource type="Texture2D" path="res://Assets/Prototype Character/Asset Packs 1-4 (final)/Asset Pack-V3/Player Death/Player Death 64x64.png" id="2_3clv6"]
[ext_resource type="PackedScene" uid="uid://68qnc173biew" path="res://Scenes/ghost.tscn" id="2_k7eyv"]
[ext_resource type="Texture2D" uid="uid://dx615fty2q67s" path="res://Assets/Custom Character/Player Roll 48x48-Sheet.png" id="2_ty88i"]
[ext_resource type="Texture2D" uid="uid://boxnrsfuvi6my" path="res://Assets/Custom Character/player air spin 48x48-Sheet.png" id="3_7spjg"]
[ext_resource type="Texture2D" uid="uid://dlllb53r4pvn8" path="res://Assets/Custom Character/Player Idle 48x48-Sheet.png" id="4_4xean"]
[ext_resource type="Texture2D" uid="uid://b1xdmefmsb2ql" path="res://Assets/Custom Character/player jump 48x48-Sheet.png" id="5_0odd3"]
[ext_resource type="Texture2D" uid="uid://2o633c2owfk0" path="res://Assets/Custom Character/player run 48x48-Sheet.png" id="6_fph3f"]
[ext_resource type="Texture2D" uid="uid://dpwel3ngllv7g" path="res://Assets/Custom Character/hurt-Sheet-Sheet.png" id="6_h2qsq"]
[ext_resource type="Texture2D" uid="uid://bjyqfg66513ri" path="res://Assets/Custom Character/bar_sheet.png" id="8_5tmhc"]
[ext_resource type="FontFile" uid="uid://diqnt3wxqeb3s" path="res://Assets/UI/CyberpunkCraftpixPixel.otf" id="11_tkqs6"]
[ext_resource type="AudioStream" uid="uid://bpuaa086bww0s" path="res://Assets/sound/sfx/Jump2 (2).wav" id="12_2056n"]
[ext_resource type="AudioStream" uid="uid://clr2grpgmjhuc" path="res://Assets/sound/sfx/Jump (2).wav" id="13_cohs5"]
[ext_resource type="AudioStream" uid="uid://dxc4l6b2d4f4a" path="res://Assets/sound/sfx/4.wav" id="14_1pepd"]
[ext_resource type="AudioStream" uid="uid://jualuipyp3vt" path="res://Assets/sound/sfx/dash.wav" id="15_0y2kj"]
[ext_resource type="AudioStream" uid="uid://rj7njjmd6ghm" path="res://Assets/sound/sfx/Hit_Hurt2.wav" id="16_1f5t3"]
[ext_resource type="AudioStream" uid="uid://cf20o4dx7bcfo" path="res://Assets/sound/sfx/Hit_Hurt6.wav" id="17_1g0o2"]
[ext_resource type="AudioStream" uid="uid://cbvbnncb2oslp" path="res://Assets/sound/sfx/Confirm 1.wav" id="18_ii2t2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oivha"]
radius = 9.0
height = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_gunu0"]
atlas = ExtResource("2_ty88i")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1i5c"]
atlas = ExtResource("2_3clv6")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug6bb"]
atlas = ExtResource("2_3clv6")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bucc0"]
atlas = ExtResource("2_3clv6")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_btwfc"]
atlas = ExtResource("2_3clv6")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bh8yx"]
atlas = ExtResource("2_3clv6")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0bqd2"]
atlas = ExtResource("2_3clv6")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_14uxw"]
atlas = ExtResource("2_3clv6")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqlkk"]
atlas = ExtResource("2_3clv6")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjj6"]
atlas = ExtResource("2_3clv6")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_301ck"]
atlas = ExtResource("2_3clv6")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgr81"]
atlas = ExtResource("3_7spjg")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2mp7"]
atlas = ExtResource("3_7spjg")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhqoo"]
atlas = ExtResource("3_7spjg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_84ip1"]
atlas = ExtResource("3_7spjg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7ala"]
atlas = ExtResource("3_7spjg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvko4"]
atlas = ExtResource("3_7spjg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4g8o"]
atlas = ExtResource("6_h2qsq")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk358"]
atlas = ExtResource("6_h2qsq")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnceh"]
atlas = ExtResource("6_h2qsq")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ejde"]
atlas = ExtResource("6_h2qsq")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n881m"]
atlas = ExtResource("4_4xean")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_oidjg"]
atlas = ExtResource("4_4xean")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rn17e"]
atlas = ExtResource("4_4xean")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2oat"]
atlas = ExtResource("4_4xean")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qc63"]
atlas = ExtResource("4_4xean")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu536"]
atlas = ExtResource("4_4xean")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fxa2"]
atlas = ExtResource("4_4xean")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgmuw"]
atlas = ExtResource("4_4xean")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4c15"]
atlas = ExtResource("4_4xean")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ankp5"]
atlas = ExtResource("4_4xean")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym5g0"]
atlas = ExtResource("5_0odd3")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o63aa"]
atlas = ExtResource("5_0odd3")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wixjj"]
atlas = ExtResource("5_0odd3")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_38csq"]
atlas = ExtResource("6_fph3f")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2h36p"]
atlas = ExtResource("6_fph3f")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu1ku"]
atlas = ExtResource("6_fph3f")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rj2n"]
atlas = ExtResource("6_fph3f")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7isws"]
atlas = ExtResource("6_fph3f")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_en12r"]
atlas = ExtResource("6_fph3f")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7c62"]
atlas = ExtResource("6_fph3f")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t32u7"]
atlas = ExtResource("6_fph3f")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_7dseh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gunu0")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1i5c")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug6bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bucc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btwfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bh8yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0bqd2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14uxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqlkk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpjj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_301ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1i5c")
}],
"loop": true,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgr81")
}],
"loop": true,
"name": &"flip_down",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2mp7")
}],
"loop": true,
"name": &"flip_peak",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhqoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84ip1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i7ala")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvko4")
}],
"loop": true,
"name": &"flipping",
"speed": 12.0
}, {
"frames": [{
"duration": 1.5,
"texture": SubResource("AtlasTexture_r4g8o")
}, {
"duration": 1.9,
"texture": SubResource("AtlasTexture_kk358")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnceh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ejde")
}],
"loop": true,
"name": &"hit_stun",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n881m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oidjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn17e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2oat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qc63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu536")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fxa2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgmuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4c15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ankp5")
}],
"loop": true,
"name": &"idle",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym5g0")
}],
"loop": true,
"name": &"jump_down",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o63aa")
}],
"loop": true,
"name": &"jump_peak",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wixjj")
}],
"loop": true,
"name": &"jump_up",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_38csq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2h36p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu1ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rj2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7isws")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en12r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7c62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t32u7")
}],
"loop": true,
"name": &"run",
"speed": 14.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gam3v"]
size = Vector2(20, 6.25)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsa74"]
atlas = ExtResource("8_5tmhc")
region = Rect2(0, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mo2m"]
atlas = ExtResource("8_5tmhc")
region = Rect2(64, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfw63"]
atlas = ExtResource("8_5tmhc")
region = Rect2(128, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tgr5"]
atlas = ExtResource("8_5tmhc")
region = Rect2(192, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5fnr"]
atlas = ExtResource("8_5tmhc")
region = Rect2(256, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7chv"]
atlas = ExtResource("8_5tmhc")
region = Rect2(320, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q14f"]
atlas = ExtResource("8_5tmhc")
region = Rect2(384, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_il2r2"]
atlas = ExtResource("8_5tmhc")
region = Rect2(448, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_debk6"]
atlas = ExtResource("8_5tmhc")
region = Rect2(512, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ao1p"]
atlas = ExtResource("8_5tmhc")
region = Rect2(576, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfhe7"]
atlas = ExtResource("8_5tmhc")
region = Rect2(640, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6anh"]
atlas = ExtResource("8_5tmhc")
region = Rect2(704, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c53w7"]
atlas = ExtResource("8_5tmhc")
region = Rect2(768, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_swe0i"]
atlas = ExtResource("8_5tmhc")
region = Rect2(832, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ww6lh"]
atlas = ExtResource("8_5tmhc")
region = Rect2(896, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k7yw"]
atlas = ExtResource("8_5tmhc")
region = Rect2(960, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ay1l"]
atlas = ExtResource("8_5tmhc")
region = Rect2(1024, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttoui"]
atlas = ExtResource("8_5tmhc")
region = Rect2(1088, 0, 64, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2raj2"]
atlas = ExtResource("8_5tmhc")
region = Rect2(1152, 0, 64, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_1bnkg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsa74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mo2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfw63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tgr5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5fnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7chv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q14f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_il2r2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_debk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ao1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfhe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6anh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c53w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swe0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ww6lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k7yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ay1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttoui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2raj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2raj2")
}, {
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"loading",
"speed": 38.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"nothing",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_1k8u5"]
font = ExtResource("11_tkqs6")
font_size = 20
font_color = Color(0.705882, 0.321569, 0.321569, 1)
outline_size = 5
outline_color = Color(0.129412, 0.129412, 0.137255, 1)
shadow_size = 4
shadow_color = Color(1, 0, 0, 1)

[node name="player" type="CharacterBody2D"]
scale = Vector2(1.6, 1.6)
collision_layer = 2
script = ExtResource("1_qs0df")
ghost_node = ExtResource("2_k7eyv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_oivha")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7dseh")
animation = &"jump_peak"

[node name="Timers" type="Node" parent="."]

[node name="Flipping_Timer" type="Timer" parent="Timers"]
one_shot = true

[node name="Death_Timer" type="Timer" parent="Timers"]
wait_time = 1.5
one_shot = true

[node name="Dash_Timer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="Dash_Cooldown_Timer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="Hitstun_Timer" type="Timer" parent="Timers"]
wait_time = 2.0

[node name="bubble_hitbox" type="Area2D" parent="."]
z_index = 3
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="bubble_hitbox"]
position = Vector2(-0.625, 11.875)
shape = SubResource("RectangleShape2D_gam3v")

[node name="dash_bar" type="AnimatedSprite2D" parent="."]
z_index = 4
position = Vector2(0, -21.25)
scale = Vector2(0.799998, 0.775002)
sprite_frames = SubResource("SpriteFrames_1bnkg")
animation = &"loading"
speed_scale = 0.25

[node name="combo_display" type="Label" parent="."]
offset_left = -4.375
offset_top = -42.5
offset_right = 54.625
offset_bottom = -19.5
label_settings = SubResource("LabelSettings_1k8u5")

[node name="Sounds" type="Node" parent="."]

[node name="Jump_1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("12_2056n")
volume_db = -16.0

[node name="Jump_2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("13_cohs5")
volume_db = -25.407
pitch_scale = 1.5

[node name="Jump_3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("14_1pepd")
volume_db = -6.0

[node name="Dash" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("15_0y2kj")
volume_db = -6.0
pitch_scale = 1.5

[node name="Hit_1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("16_1f5t3")
volume_db = -12.0

[node name="Hit_2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("17_1g0o2")
volume_db = -12.0

[node name="Heal" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("18_ii2t2")
volume_db = -6.0

[connection signal="timeout" from="Timers/Flipping_Timer" to="." method="_on_flipping_timer_timeout"]
[connection signal="timeout" from="Timers/Death_Timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Timers/Dash_Timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="Timers/Dash_Cooldown_Timer" to="." method="_on_dash_cooldown_timer_timeout"]
[connection signal="timeout" from="Timers/Hitstun_Timer" to="." method="_on_hitstun_timer_timeout"]
[connection signal="area_entered" from="bubble_hitbox" to="." method="_on_bubble_hitbox_area_entered"]
